Обновил кешбеки на страницу финансов.